[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-hbxcontrols"
version = "1.0.0"
description = "Home Assistant custom integration for HBX Controls devices"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["homeassistant", "hbxcontrols", "sensorlinx", "integration", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies = [
    "pysensorlinx>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "homeassistant>=2023.1.0",
]

[project.urls]
Homepage = "https://github.com/sslivins/hass_hbxcontrols"
Repository = "https://github.com/sslivins/hass_hbxcontrols"
Issues = "https://github.com/sslivins/hass_hbxcontrols/issues"

[tool.setuptools.packages.find]
include = ["hbxcontrols*"]
exclude = ["tests*"]
